unpackaged/main/default/objects/Product2/fields/FLOB_Description__c.field-meta.xml
<CustomField>
    <fullName>FLOB_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FLOB Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>