unpackaged/main/default/objects/Product2/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LOB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>