unpackaged/main/default/objects/Product2/fields/Master_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Product_ID__c</fullName>
    <description>External Id for product object.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Master Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>