unpackaged/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASO / ATP STD</fullName>
            </value>
            <value>
                <fullName>Copay PPO</fullName>
            </value>
            <value>
                <fullName>Indiv. Dental</fullName>
            </value>
            <value>
                <fullName>Indiv. Life</fullName>
            </value>
            <value>
                <fullName>Indiv. Worksite</fullName>
            </value>
            <value>
                <fullName>Indemnity/PAR</fullName>
            </value>
            <value>
                <fullName>LTD / VLTD</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>PPO+</fullName>
            </value>
            <value>
                <fullName>Prepaid/DHMO</fullName>
            </value>
            <value>
                <fullName>STD / VSTD</fullName>
            </value>
            <value>
                <fullName>TDI</fullName>
            </value>
            <value>
                <fullName>True Group Life</fullName>
            </value>
            <value>
                <fullName>VADD</fullName>
            </value>
            <value>
                <fullName>VGTL</fullName>
            </value>
            <value>
                <fullName>Worksite ECR</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Non-Integrated</fullName>
            </value>
            <value>
                <fullName>PFML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>