unpackaged/main/default/objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the product that will be added to opportunities. Used for opportunity batch creation. Values must be manually updated by backfill or Admin.</description>
    <label>Product Line</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>