unpackaged/main/default/objects/Product2/fields/Product_Line_for_Opp__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_for_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in the code that creates the opportunities via batch, and it indicates that the product is a &#39;generic&#39; product line that could be added to an opportunity.</description>
    <label>Product Line for Opp</label>
    <type>Checkbox</type>
</CustomField>