unpackaged/main/default/objects/Product2/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <label>Product Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care</fullName>
            </value>
            <value>
                <fullName>TG Choice</fullName>
            </value>
            <value>
                <fullName>TG Choice Plus</fullName>
            </value>
            <value>
                <fullName>TG Copayment</fullName>
            </value>
            <value>
                <fullName>Traditional PPO</fullName>
            </value>
            <value>
                <fullName>Traditional PPO+</fullName>
            </value>
            <value>
                <fullName>Traditional PPP</fullName>
            </value>
            <value>
                <fullName>Vol. Choice</fullName>
            </value>
            <value>
                <fullName>Vol. Choice Plus</fullName>
            </value>
            <value>
                <fullName>Vol. Copayment</fullName>
            </value>
            <value>
                <fullName>Vol. PPO</fullName>
            </value>
            <value>
                <fullName>Vol. PPO+</fullName>
            </value>
            <value>
                <fullName>Vol. PPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>