unpackaged/main/default/objects/Product2/fields/Product_Sub_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Sub Category Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>