unpackaged/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field specifies the type of product.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LSV</fullName>
            </value>
            <value>
                <fullName>BCBS</fullName>
            </value>
            <value>
                <fullName>Dental Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>